@@ -1,0 +1,20 @@
+// -*- mode: C++; c-indent-level: 4; c-basic-offset: 4;  tab-width: 8; -*-
+//
+// Qt usage example for RInside, inspired by the standard 'density
+// sliders' example for other GUI toolkits
+//
+// Copyright (C) 2011  Dirk Eddelbuettel and Romain Francois
+
+
+#include <QApplication>
+
+#include "qtdensity.h"
+
+int main(int argc, char *argv[])
+{
+    RInside R(argc, argv);  		// create an embedded R instance
+
+    QApplication app(argc, argv);
+    QtDensity qtdensity(R);
+    return app.exec();
+}
